src/objects/Contract_Rate_Based_Royalty_Row__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Rate_Based_Royalty__c</fullName>
        <label>Contract Rate Based Royalty</label>
        <referenceTo>Contract_Rate_Based_Royalty__c</referenceTo>
        <relationshipLabel>Contract Rate Based Royalty Row&apos;s</relationshipLabel>
        <relationshipName>Contract_Rate_Based_Royalty_Row_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>High_Volume__c</fullName>
        <label>High Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Volume__c</fullName>
        <label>Low Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_per_Unit__c</fullName>
        <label>Rate per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Rate Based Royalty Row</label>
    <nameField>
        <displayFormat>RRR-{000000000}</displayFormat>
        <label>Contract Rate Based Royalty Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Rate Based Royalty Row&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>